Remove base path again and generate swagger docs
